# HLCMapPlugins

./: CMakeLists.txt  README.md
aomdc/: CMakeLists.txt  ammo.cpp  aomdc.cpp  aomdc.h  env_hidehud.cpp  env_model.cpp  item_flashlight.cpp  monster_david.cpp  monster_ghost.cpp  trigger_ripent.cpp  weapon_aom_knife.cpp  weapon_aom_shotgun.cpp  weapon_axe.cpp  weapon_beretta.cpp  weapon_deagle.cpp  weapon_glock.cpp  weapon_hammer.cpp  weapon_mp5k.cpp  weapon_p228.cpp  weapon_revolver.cpp  weapon_spear.cpp  weapon_uzi.cpp  wheelchair_monster.cpp  zombie.cpp
bspguy/: CMakeLists.txt  bspguy.cpp  bspguy_equip.cpp
contra/monster/: monster_boyz.cpp  monster_gunwagon.cpp
contra/proj/: proj_bullet.cpp
contra/weapon/: weapon_contra.cpp
crossedpaths/: CMakeLists.txt  asscart.cpp  crossedpaths.cpp  crossedpaths.h  crossedpaths2.cpp  crossedpaths3.cpp  laseractivation.cpp  mbg.cpp  messages.cpp  towerofhanoi.cpp
doom2/: CDoomDoor.cpp  CDoomDoor.h  CDoomItem.cpp  CDoomItem.h  CDoomMonster.cpp  CDoomMonster.h  CDoomProjectile.cpp  CDoomProjectile.h  CDoomSprite.cpp  CDoomSprite.h  CDoomTeleport.cpp  CDoomTeleport.h  CDoomWater.cpp  CDoomWater.h  CMakeLists.txt  doom2.cpp  doom2.h  doom_utils.cpp  doom_utils.h  items.cpp  monsters.cpp  projectiles.cpp  sound_nodes.cpp  sound_nodes.h  utils.cpp
insurgency/: CMakeLists.txt  explosive_base.cpp  explosive_base.h  insurgency.cpp  proj_ins2gl.cpp
io/: CMakeLists.txt  io.cpp  weapon_colt.cpp  weapon_dualglock.cpp  weapon_fiveseven.cpp  weapon_p228sil.cpp  weapon_sawedoff.cpp
kmkz/: CMakeLists.txt  env_model_coop.cpp  env_warpball.cpp  func_global.cpp  main.cpp
pizza_ya_san/: CMakeLists.txt  pizza_ya_san.cpp  weapon_as_jetpack.cpp  weapon_as_shotgun.cpp  weapon_as_soflam.cpp
poke646/: CMakeLists.txt  ammo_nailclip.cpp  ammo_nailround.cpp  ammo_par21_clip.cpp  ammo_par21_grenade.cpp  nail.cpp  poke646.cpp  weapon_bradnailer.cpp  weapon_cmlwbr.cpp  weapon_heaterpipe.cpp  weapon_nailgun.cpp  weapon_par21.cpp  weapon_sawedoff.cpp
svencontra2/: point_checkpoint.cpp
sweet_hl/: CMakeLists.txt  plasmaball.cpp
weapon_custom/: CMakeLists.txt  CWeaponCustomAmmo.cpp  CWeaponCustomAmmo.h  CWeaponCustomBase.cpp  CWeaponCustomConfig.cpp  CWeaponCustomConfig.h  CWeaponCustomEffect.cpp  CWeaponCustomEffect.h  CWeaponCustomProjectile.cpp  CWeaponCustomProjectile.h  CWeaponCustomShoot.cpp  CWeaponCustomShoot.h  CWeaponCustomSound.cpp  CWeaponCustomSound.h  CWeaponCustomUserEffect.cpp  CWeaponCustomUserEffect.h  WeaponSound.cpp  WeaponSound.h  const_wc.h  util_wc.cpp  util_wc.h  weapon_custom.cpp  weapon_custom.fgd  weapon_custom.h
weapon_custom/temp/: WeaponCustomBase.cpp  attack.cpp  utils.cpp  weapon_custom.cpp
(+81 files in other folders)
