project(plugins)

add_subdirectory(aomdc)
add_subdirectory(bspguy)
add_subdirectory(contra)
add_subdirectory(crossedpaths)
add_subdirectory(disconator)
add_subdirectory(io)
add_subdirectory(kmkz)
add_subdirectory(pizza_ya_san)
add_subdirectory(poke646)
add_subdirectory(restriction)
add_subdirectory(svencontra2)
add_subdirectory(weapon_custom)